Nova funcionalidade implementada: Implementar sistema de salvamento da Paleta no módulo de Avaliação Comparar os relatórios dos dois tipos de processamento Gerar as métricas