@@ -2,6 +2,25 @@
 
 <p>Projeto desenvolvido como parte do Trabalho de Conclusão de Curso da Instiruição IFPE campus recife do curso de TADS.</p>
 
+<p>Para este projeto será necessária a instalação da api do OpenCV.</p>
+<p>Para utilizar este projeto será necessário instalar o OpenCV na máquina</p>
+<h5>Instruções:</h5>
+<ul>
+<li>Acessar o <a href="https://opencv.org/releases/">site</a> do OpenCV na release necessária (4.7.0 neste projeto).</li>
+<li>Baixar e instalar a opção correspondente ao seu sistema operacional (Windows neste projeto)</li>
+<li>Após instalado, incluir a biblioteca do OpenCV no projeto neste caminho: (local de instalação)/opencv/build/java/opencv-470.jar</li>
+<li>Alterar a propriedade "run.jvmargs" em project.properties para identificar o OpenCV instalado localmente: (caminho de instalação)/opencv/build/java/x64 </li>
+<li>A propriedade anterior também pode ser alterada dentro do Netbeans seguindo o caminho: 
+    <ul>
+        <li>Clique no botão direito no projeto</li>
+        <li>Acessar "Propriedades"</li>
+        <li>Ao Abrir, Acessar "Executar"</li>
+        <li>Abrindo a opção, deve-se alterar no campo VM Options para: -Djava.library.path="(caminho de instalação)opencv\build\java\x64" --enable-preview</li>
+        <li></li>
+    </ul>
+</li>
+</ul>
+
 <p>O objetivo geral deste trabalho é desenvolver uma aplicação monolítica de contagem e identificação de ovos do Aedes aegypti contidos em uma imagem, utilizando técnicas
 de visão computacional.</p>
 
@@ -40,7 +59,7 @@ de visão computacional.</p>
 <p>O módulo de Contagem Manual é o primeiro dos três módulos que formam a aplicação. Ele possibilita realizar a contagem e identificação dos ovos manualmente por uma pessoa operadora. A aplicação, como mostra a figura abaixo, apresenta a vantagem de abstrair a manipulação de microscópios para a contagem dos ovos, eliminando as falhas causadas pela falta de destreza na manipulação deste equipamento.</p>
 <p>Ele também será usado como padrão ouro para todo o projeto, já que fica a critério do operador definir o que é ovo ou não.</p>
 </section>
-<img src="/images/mod_manual_1.png" alt="Imagem do Módulo de Contagem Manual" style="width:800px;height:480px"/>
+<img src="/images/mod_manual_2.png" alt="Imagem do Módulo de Contagem Manual" style="width:800px;height:480px"/>
 </div>
 
 <div>
@@ -48,7 +67,7 @@ de visão computacional.</p>
 <section>
 <p>No Módulo de Contagem Automática, a paleta selecionada é processada automaticamente pelo software.</p>
 </section>
-<img src="/images/mod_auto_1.png" alt="Imagem do Módulo de Contagem Automática" style="width:800px;height:480px"/>
+<img src="/images/mod_auto_2.png" alt="Imagem do Módulo de Contagem Automática" style="width:800px;height:480px"/>
 </div>
 
 <div>
@@ -58,5 +77,5 @@ de visão computacional.</p>
 <p>Cada um dos módulos de contagem produz um relatório final contendo os dados dos ovos encontrados. O Módulo de Avaliação faz o uso destes artefatos e, 
 utilizando a contagem manual como padrão ouro, confronta os dados com a contagem automática a fim de extrair algumas métricas de acerto.</p>
 </section>
-<img src="/images/mod_result_1.png" alt="Imagem do Módulo de Avaliação" style="width:800px;height:480px"/>
+<img src="/images/mod_result_2.png" alt="Imagem do Módulo de Avaliação" style="width:800px;height:480px"/>
 </div>
